# trossen-oss

./: .gitignore  README.md  pyproject.toml  pyrefly.toml
.agents/skills/rerun-blueprint/: SKILL.md
.agents/skills/rerun-catalog-queries/: SKILL.md
.agents/skills/rerun-chunk-processing/: SKILL.md
.agents/skills/rerun-data-model/: SKILL.md
.agents/skills/rerun-lerobot/: SKILL.md
.agents/skills/rerun-mcap/: SKILL.md
.agents/skills/rerun-parquet/: SKILL.md
.agents/skills/rerun-urdf/: SKILL.md
assets/urdf/: robot.urdf  scene.urdf  wxai_follower_left.urdf  wxai_follower_right.urdf
docs/: prd-local-ingestion.md
notebooks/: analyze_dataframe.ipynb  analyze_sql.ipynb  welcome.ipynb
scripts/: web_blueprint.py
src/trossen_oss/: __init__.py  catalog.py  download.py  enrich.py  paths.py  preprocessing.py  query.py  train.py
tests/: test_helpers.py  test_train.py
tools/: enrich.py  preprocess.py  query.py  register_catalog.py  train.py
