[project]
authors = [{ name = "pablo vela", email = "pablovela5620@gmail.com" }]
dependencies = []
name = "trossen-oss"
description = "Local Rerun ingestion pipeline for Trossen bimanual episodes."
requires-python = ">=3.12,<3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/trossen_oss"]

# ---------------------------------------------------------------------------
# pixi
# ---------------------------------------------------------------------------
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

# Runtime (default feature) — the local ingest/serve/register/query pipeline.
# jupyterlab + rerun-notebook are added at the notebook step; torch via the
# [dataloader] extra is added at the training step.
[tool.pixi.dependencies]
python = "3.12.*"
numpy = "*"
pyarrow = "*"
jaxtyping = "<0.3"
pyserde = ">=0.31.2,<0.32"
huggingface_hub = "*"
hf-transfer = "*"
av = ">=15,<16"
ffmpeg = ">=8.0.0,<9"

[tool.pixi.pypi-dependencies]
trossen_oss = { path = ".", editable = true }
rerun-sdk = { version = "==0.33.0", extras = ["catalog", "datafusion"] }

# Dev feature — type-checking, linting, tests. Enables beartype at import time
# via PIXI_DEV_MODE so default/production runs carry no runtime checking cost.
[tool.pixi.feature.dev.dependencies]
beartype = ">=0.22.9"
pyrefly = ">=1.0.0"
ruff = "*"
pytest = ">=8.0.0,<9"

[tool.pixi.feature.dev.activation.env]
PIXI_DEV_MODE = "1"

[tool.pixi.feature.dev.tasks.typecheck]
cmd = "pyrefly check"
description = "Static type check with pyrefly"

[tool.pixi.feature.dev.tasks.fmt]
cmd = "ruff check --fix . && ruff format ."
description = "Auto-fix lint and format"

[tool.pixi.feature.dev.tasks.fmt-check]
cmd = "ruff check . && ruff format --check ."
description = "Check lint and format without modifying files"

[tool.pixi.feature.dev.tasks.test]
cmd = "pytest"
description = "Run the test suite"

[tool.pixi.feature.dev.tasks.check-all]
depends-on = ["fmt-check", "typecheck", "test"]
description = "Run format-check, typecheck, and tests"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py312"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# F722/F821: jaxtyping shape strings read as forward-annotation false positives.
ignore = ["E501", "F722", "F821", "UP037"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
