[project]
authors = [{ name = "pablo vela", email = "pablovela5620@gmail.com" }]
dependencies = []
name = "trossen-oss"
description = "Local Rerun ingestion pipeline for Trossen bimanual episodes."
requires-python = ">=3.12,<3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/trossen_oss"]

# ---------------------------------------------------------------------------
# pixi
# ---------------------------------------------------------------------------
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

# Runtime (default feature) — the local ingest/serve/register/query pipeline.
# jupyterlab + rerun-notebook are added at the notebook step; torch via the
# [dataloader] extra is added at the training step.
[tool.pixi.dependencies]
python = "3.12.*"
numpy = "*"
pyarrow = "*"
jaxtyping = "<0.3"
pyserde = ">=0.31.2,<0.32"
huggingface_hub = "*"
av = ">=15,<16"
ffmpeg = ">=8.0.0,<9"
tyro = ">=0.9.1,<0.10"
tqdm = ">=4.66"

[tool.pixi.pypi-dependencies]
trossen_oss = { path = ".", editable = true }
rerun-sdk = { version = "==0.33.0", extras = ["catalog", "datafusion"] }

# Episode download. PLACEHOLDER repo id — update both tasks once the dataset is
# published. The OSS dataset publishes 100 episodes max. `download` fetches 10
# sample episodes (0-9); the guard makes it a no-op when data/ already exists
# (e.g. the dev-machine symlink). `download-all` fetches all 100 (0-99).
[tool.pixi.tasks.download]
cmd = "test -e data/episode_0_proto.mcap || hf download pablovela5620/trossen-mjwarp-episodes --repo-type dataset --include 'episode_[0-9]_proto.mcap' --local-dir data/"
description = "Download 10 sample episode MCAPs from the Hugging Face Hub into data/"

[tool.pixi.tasks.download-all]
cmd = "hf download pablovela5620/trossen-mjwarp-episodes --repo-type dataset --include 'episode_[0-9]_proto.mcap' --include 'episode_[1-9][0-9]_proto.mcap' --local-dir data/"
description = "Download all 100 episode MCAPs from the Hugging Face Hub into data/"

# Local ingestion -> catalog pipeline.
# `preprocess` converts an MCAP episode into outputs/{data,urdf}.rrd + blueprint;
# `serve` runs the in-memory OSS data platform; `register` registers the RRDs as
# a catalog dataset (run `serve` in another shell first).
[tool.pixi.tasks.preprocess]
cmd = "python tools/preprocess.py"
description = "Convert episode MCAP into RRDs + blueprint under outputs/"

[tool.pixi.tasks.serve]
cmd = "rerun server --port 51234"
description = "Start the local in-memory Rerun data platform (catalog) on :51234"

[tool.pixi.tasks.register]
cmd = "python tools/register_catalog.py"
description = "Register outputs/ RRDs into the local catalog as a dataset"

[tool.pixi.tasks.query]
cmd = "python tools/query.py"
description = "Run cross-episode queries against the local catalog (needs serve + register)"

# Dev feature — type-checking, linting, tests. Enables beartype at import time
# via PIXI_DEV_MODE so default/production runs carry no runtime checking cost.
[tool.pixi.feature.dev.dependencies]
beartype = ">=0.22.9"
pyrefly = ">=1.0.0"
ruff = "*"
pytest = ">=8.0.0,<9"

[tool.pixi.feature.dev.activation.env]
PIXI_DEV_MODE = "1"

[tool.pixi.feature.dev.tasks.typecheck]
cmd = "pyrefly check"
description = "Static type check with pyrefly"

[tool.pixi.feature.dev.tasks.fmt]
cmd = "ruff check --fix . && ruff format ."
description = "Auto-fix lint and format"

[tool.pixi.feature.dev.tasks.fmt-check]
cmd = "ruff check . && ruff format --check ."
description = "Check lint and format without modifying files"

[tool.pixi.feature.dev.tasks.test]
cmd = "pytest"
description = "Run the test suite"

[tool.pixi.feature.dev.tasks.check-all]
depends-on = ["fmt-check", "typecheck", "test"]
description = "Run format-check, typecheck, and tests"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py312"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# F722/F821: jaxtyping shape strings read as forward-annotation false positives.
ignore = ["E501", "F722", "F821", "UP037"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
